included edits to fix axe devtool errors: * _quarto.yml: fix heart error * course-overview.qmd: add text info to icons * sta199.scss: added something to make added text to icons (see above) invisible.

--- a/style/sta199.scss
+++ b/style/sta199.scss
@@ -70,3 +70,16 @@ $font-family: "Atkinson Hyperlegible", sans-serif;
 div.sourceCode pre.sourceCode {
   background-color: #e9e9e9;
 }
+
+/* Added to ignore text within links */
+.about-link-text {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
+}
